# ts-from-gql

./: README.md  generate_ts.py  output_file_path
ts-from-gql/: Cargo.toml
