[package]
name = "ts-from-gql"
version = "0.1.0"
authors = ["William Goodwin <willgoodwin@duck.com>"]
description = "A project that generates TS interfaces from graphql schema."
license = "MIT/Apache-2.0"
repository = "https://github.com/wbgoodwin/ts-from-gql"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
